fix razor pages;

--- a/src/Dotnet9.RazorPages/Pages/_Imports.razor
+++ b/src/Dotnet9.RazorPages/Pages/_Imports.razor
@@ -7,3 +7,7 @@
 @using Dotnet9.Contracts.Dto.Categories
 @using Dotnet9.Contracts.Dto.FriendlyLinks
 @using Dotnet9.Caller.Services.Links
+@using Dotnetools.Share.Components.Shared
+@using Dotnetools.Share.Datas
+@using Dotnetools.Share.Models
+@using Microsoft.AspNetCore.Components.Web
