add game of gobang;

--- a/src/Dotnet9.BlazorWeb/Shared/RecommendedGamesSideBar.razor
+++ b/src/Dotnet9.BlazorWeb/Shared/RecommendedGamesSideBar.razor
@@ -20,7 +20,8 @@
     readonly Dotnetools.Share.Models.ToolItem[] _items = new[]
     {
         ToolKind.GameTetris.Item()!,
-        ToolKind.GameMinesweeper.Item()!
+        ToolKind.GameMinesweeper.Item()!,
+        ToolKind.GameGobang.Item()!
     };
 
 }
