--- a/src/Dotnetools.Share/Components/Shared/ToolItemComponent.razor
+++ b/src/Dotnetools.Share/Components/Shared/ToolItemComponent.razor
@@ -49,6 +49,9 @@
     case ToolKind.GameTetris:
         <Tetris/>
         break;
+    case ToolKind.GameGobang:
+        <Gobang/>
+        break;
     case ToolKind.GameGuessingNumbers:
         <GuessingNumbers/>
         break;
