--- a/src/Dotnetools.Web/Shared/RecommendedGamesSideBar.razor
+++ b/src/Dotnetools.Web/Shared/RecommendedGamesSideBar.razor
@@ -16,6 +16,7 @@
     readonly ToolItem[] _items = new[]
     {
         ToolKind.GameTetris.Item()!,
-        ToolKind.GameMinesweeper.Item()!
+        ToolKind.GameMinesweeper.Item()!,
+        ToolKind.GameGobang.Item()!
     };
 }
