--- a/src/Dotnet9Site/Pages/Shared/_Layout.cshtml
+++ b/src/Dotnet9Site/Pages/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 @inject ConfigService Config;
 @{
     ViewData["siteName"] = await Config.GetString<SiteConfig>(a => a.SiteName, "未设置");
+    ViewData["siteDesc"] = await Config.GetString<SiteConfig>(a => a.SiteDesc, "未设置");
 }
 <html>
 <head>
@@ -16,7 +17,7 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container">
-        <a class="navbar-brand" href="/">@ViewData["siteName"]</a>
+        <a class="navbar-brand" href="/" title="@ViewData["siteDesc"]">@ViewData["siteName"]</a>
     </div>
 </nav>
 <main>
@@ -47,7 +48,7 @@
             }
             <div class="row mt-2">
                 <div class="col">
-                    <p>本站基于<a href="https://dotnet.microsoft.com/zh-cn/" target="_blank" class="text-info">.NET 7.0</a> 构建,使用RazorPages + EntityFrameWorkCore 7.0 + Vue.js 3.0技术开发</p>
+                    <p>本站基于<a href="https://dotnet.microsoft.com/zh-cn/" target="_blank" class="text-info">.NET 8.0</a> 构建，使用前台Razor Pages + 后端Web API，后台前端EF Core 8.0 + Vue 3.0技术开发</p>
                 </div>
             </div>
         </div>
