--- a/src/Dotnet9Site/Pages/Partial/_FriendLinkView.cshtml
+++ b/src/Dotnet9Site/Pages/Partial/_FriendLinkView.cshtml
@@ -4,7 +4,7 @@
 @{
     var res = await FlService.GetLinkList(new GetFriendLinkModel
     {
-        Index = 1,
+        PageIndex = 1,
         PageSize = 50
     });
 }
