--- a/src/Dotnet9Site/Pages/Partial/_PostItemView.cshtml
+++ b/src/Dotnet9Site/Pages/Partial/_PostItemView.cshtml
@@ -12,7 +12,7 @@
 
             <div class="post-item-desc  text-body">
                 <div class="post-thumb">
-                    <img src="@item.Thumb" alt="@item.Title" onerror="this.onerror='';this.style.display='none'"/>
+                    <img src="@item.Thumb" alt="@item.Title" onerror="this.onerror = '';this.style.display = 'none'"/>
                 </div>
                 <div class="post-item-body">
                     <div class="post-item-cate text-black-50">
@@ -23,7 +23,16 @@
                             }
                         </span>
 
-                        / <span>更新时间:@item.LastUpdateTime.ToString("yyyy-MM-dd HH:mm")</span> / <span>阅读次数:@item.ReadCount</span>
+                        /
+                        @if (@item.LastUpdateTime == default)
+                        {
+                            <span> 创建时间:@item.CreateTime.ToString("yyyy-MM-dd HH:mm")</span>
+                        }
+                        else
+                        {
+                            <span> 更新时间:@item.LastUpdateTime.ToString("yyyy-MM-dd HH:mm")</span>
+                        }
+                        / <span>阅读次数:@item.ReadCount</span>
                     </div>
                     <div class="post-snippit">
                         @Html.Raw(item.Snippet)
