--- a/src/Dotnet9Site/Pages/Shared/_Layout.cshtml
+++ b/src/Dotnet9Site/Pages/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
             }
             <div class="row mt-2">
                 <div class="col">
-                    <p>本站基于<a href="https://dotnet.microsoft.com/zh-cn/" target="_blank" class="text-info">.NET 8.0</a> 构建，使用前台Razor Pages + 后端Web API，后台前端EF Core 8.0 + Vue 3.0技术开发</p>
+                        <p>本站基于<a href="https://dotnet.microsoft.com/zh-cn/" target="_blank" class="text-info">.NET 8.0</a> 构建，使用前台Razor Pages + 后端Web API + EF Core 8.0 + PostgreSQL，后台前端Vue 3.0技术开发</p>
                 </div>
             </div>
         </div>
