--- a/src/Dotnet9.Web/Pages/Shared/_FooterPartial.cshtml
+++ b/src/Dotnet9.Web/Pages/Shared/_FooterPartial.cshtml
@@ -27,11 +27,11 @@
             </p>
 
             <p>
-                &nbsp; 由 .NET 7.0 强力驱动
+                &nbsp; 由 .NET 8.0 强力驱动
                 &nbsp; | <a href="@SiteOptions.Value.Github" target="_blank">Github</a>
-                &nbsp; | 前台&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/razor-pages/?view=aspnetcore-7.0&tabs=visual-studio" target="_blank">Razor Pages</a>
-                &nbsp; | 后端&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/web-api/?view=aspnetcore-7.0" target="_blank">.NET Web API</a>
-                &nbsp; | 后台前端&nbsp;<a href="https://pro.ant.design/" target="_blank">Ant Design Pro</a>
+                &nbsp; | 前台&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/razor-pages/?view=aspnetcore-8.0&tabs=visual-studio" target="_blank">Razor Pages</a>
+                &nbsp; | 后端&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/web-api/?view=aspnetcore-8.0" target="_blank">.NET Web API</a>
+                &nbsp; | 后台前端&nbsp;<a href="https://element.eleme.cn/#/zh-CN" target="_blank">Vue 2.x</a>
             </p>
         </div>
     </div>
