add ShortId for BlogPost;

--- a/src/Dotnet9.Web/Pages/BlogPosts/DetailsByShortId.cshtml
+++ b/src/Dotnet9.Web/Pages/BlogPosts/DetailsByShortId.cshtml
@@ -1,5 +1,5 @@
-﻿@page "/{Year}/{Month}/{Slug}"
-@model IndexModel
+﻿@page "/{ShortId}"
+@model DetailsByShortIdModel
 
 @{
     ViewData["Title"] = Model?.Current?.Title;
