--- a/src/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
@@ -33,7 +33,7 @@
             </form>
         </div>
         <div class="logo">
-            <a href="#">
+            <a href="/">
                 <img alt="@SiteOptions.Value.AppName" src="~/images/logo.png">
                 <h2 class="logo-title">@SiteOptions.Value.AppName</h2>
                 <p class="logo-text">@SiteOptions.Value.Subheading</p>
