--- a/src/Dotnet9.Web/Pages/Home/_NewsPartial.cshtml
+++ b/src/Dotnet9.Web/Pages/Home/_NewsPartial.cshtml
@@ -73,7 +73,7 @@
                         </ul>
                     </div>
                     <span class="tab-a-more">
-                        <a href="/cat/@cat.CategorySlug" title="更多@(cat.CategoryName)">
+                        <a href="/cat/@cat.CategorySlug" title="更多@(cat.CategoryName)" target="_blank">
                             <i></i><i></i><i></i>
                         </a>
                     </span>
