--- a/src/Dotnet9.Web/Pages/Archives/Index.cshtml
+++ b/src/Dotnet9.Web/Pages/Archives/Index.cshtml
@@ -27,7 +27,7 @@
                                     {
                                         <li>
                                             <h4 class="mt-0 mb-1 font-16">
-                                                <a style="color: #262626;" href="/@blogPost.CreationTime.ToString("yyyy/MM")/@blogPost.Slug">@blogPost.Title</a>
+                                                <a style="color: #262626;" href="/@blogPost.CreationTime.ToString("yyyy/MM")/@blogPost.Slug" target="_blank">@blogPost.Title</a>
                                             </h4>
                                             <p class="text-muted">
                                                 ---<small>@blogPost.CreationTime.ToString("yyyy年MM月dd日 hh:mm:ss")</small>
