--- a/src/Dotnet9.Web/Pages/Donations/Index.cshtml
+++ b/src/Dotnet9.Web/Pages/Donations/Index.cshtml
@@ -14,13 +14,13 @@
     <div class="page-title" id="pageContents">
         <ul>
             <li>
-                <a href="/about">关于我们</a>
+                <a href="/about" target="_blank">关于我们</a>
             </li>
             <li>
-                <a href="/donation">赞助我们</a>
+                <a href="/donation" target="_blank">赞助我们</a>
             </li>
             <li>
-                <a href="/privacy">隐私政策</a>
+                <a href="/privacy" target="_blank">隐私政策</a>
             </li>
         </ul>
     </div>
