add dotnetools menu;

--- a/src/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
@@ -49,6 +49,7 @@
             <ul id="starlist">
                 <li>
                     <a href="/">网站首页</a>
+                    <a href="https://dotnetools.com/" target="_blank">Dotnet工具箱</a>
                 </li>
                 @if (headerDatas?.Albums is { Count: > 0 })
                 {
