--- a/src/Dotnet9.Web/Pages/Shared/_FooterPartial.cshtml
+++ b/src/Dotnet9.Web/Pages/Shared/_FooterPartial.cshtml
@@ -17,9 +17,6 @@
         </div>
         <div class="endnav">
             <p>
-                <b>站点声明：</b>
-            </p>
-            <p>
                 &nbsp; 2019~@DateTimeOffset.Now.Year © <a href="@SiteOptions.Value.Domain">@SiteOptions.Value.Domain</a> & @SiteOptions.Value.Owner 版权所有
                 &nbsp; | <a href="@SiteOptions.Value.BeiAnUrl" target="_blank" rel="nofollow noopener">@SiteOptions.Value.BeiAn</a>
                 &nbsp; | <a href="/sitemap.xml" target="_blank">网站地图</a>
@@ -32,6 +29,7 @@
                 &nbsp; | 前台&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/razor-pages/?view=aspnetcore-8.0&tabs=visual-studio" target="_blank">Razor Pages</a>
                 &nbsp; | 后端&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/web-api/?view=aspnetcore-8.0" target="_blank">.NET Web API</a>
                 &nbsp; | 后台前端&nbsp;<a href="https://element.eleme.cn/#/zh-CN" target="_blank">Vue 2.x</a>
+                &nbsp; | Dotnet工具箱&nbsp;<a href="https://cn.vuejs.org/" target="_blank">Vue 3.x</a>
             </p>
         </div>
     </div>
